--- a/KccBrew/src/main/webapp/resources/css/comm/footer.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/footer.css
@@ -16,7 +16,7 @@ footer {
     width:100%;
     height:45px;
     line-height: 45px;
-    padding: 0 20px;
+    padding-left: 20px;
 }
 .f-btn {
 	font-style: normal;
@@ -25,6 +25,9 @@ footer {
 	font-size:0.9em;
 	padding:0 5px;
 	cursor:pointer;
+}
+.f-btn:hover {
+	text-decoration: underline;
 }
 .num {
 	font-size:1em;
@@ -36,7 +39,7 @@ footer {
     height:70px;
     line-height:35px;
     font-size: 0.8em;
-    padding: 0 20px;
+    padding: 0 10px;
 }
 
 .f-info, .f-info2 {	
