--- a/KccBrew/src/main/webapp/resources/css/comm/header.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/header.css
@@ -20,9 +20,10 @@
 /******** 최상단 바 ***********/
 .top-bar {
 	display: flex;
+	font-family: 'Noto Sans';
 	justify-content: flex-end;
-	padding: 0 200px;
-	font-size: 0.8em;
+	padding: 0;
+	font-size: 13.5px;
 	color: #ffffff;
 	height: 30px;
 	line-height: 30px;
@@ -74,10 +75,12 @@
 
 #notification-list {
 	width: 400px;
-	position: absolute;
+	position: relative;
 	max-height: 700px;
 	z-index: 99;
 	overflow-y: auto;
+	right:110px;
+	top:5px;
 }
 
 .top-bar>div {
