--- a/KccBrew/src/main/webapp/resources/css/comm/maincontents-admin.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/maincontents-admin.css
@@ -46,13 +46,14 @@ button {
 	margin-bottom: 3px;
 	width: 100%;
 	float: left;
+	margin-top:5px;
 }
 
 .btm {
 	align-items: center;
 	position: relative;
 	/* width: 100%; */
-	height: 217px;
+	height: 229px;
 	max-height: 100%;
 	flex: 1;
 	margin-right: 5px;
@@ -107,13 +108,16 @@ button {
 
 .btm::-webkit-scrollbar {
 	width: 5px;
+	border-radius: 5px;
 }
 
 .btm::-webkit-scrollbar-thumb {
 	background-color: #1A55A1;
+	border-radius: 5px;
 }
 
 .btm::-webkit-scrollbar-track {
+	border-radius: 5px;
 	background-color: #c0c0c0;
 	border-top: 1.5px solid #c0c0c0;
 }
@@ -175,10 +179,8 @@ button {
 .bottom-menu {
 	width: 100%;
 	flex: 0.6;
-	/* display: flex;
-		justify-content: space-between; */
-	/* min-height: 700px; */
-	/* margin-top: 5px; */
+	height:505px;
+	margin-top:0;
 }
 
 .bottom-menu>div {
@@ -342,7 +344,7 @@ border-bottom-left-radius : 10px;
 	min-height: 700px; */
 	float: left;
 	width: 60%;
-	height: 500px;
+	height: 505px;
 	
 	padding: 15px;
     border-radius: 10px;
