--- a/KccBrew/src/main/webapp/resources/css/comm/header.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/header.css
@@ -204,6 +204,9 @@
 /********* nav 바 *************/
 .nav-bar {
 	position: relative;
+	font-family: 'Noto Sans';
+	font-weight:500;
+	font-size: 17px;
 	/* 	padding-left: 7px;
 	padding-right: 25px; */
 	height: 70px;
