--- a/KccBrew/src/main/webapp/resources/css/notice/notice.css
+++ b/KccBrew/src/main/webapp/resources/css/notice/notice.css
@@ -16,6 +16,11 @@
 	position:relative;
 	width: 20px;
 	height: 20px;
+}
+.header-icon-background2 {
+	position:relative;
+	width: 20px;
+	height: 20px;
 	top:6.5px;
 }
 
