--- a/KccBrew/src/main/webapp/resources/css/asMng/asDetail.css
+++ b/KccBrew/src/main/webapp/resources/css/asMng/asDetail.css
@@ -210,7 +210,11 @@ input[type=file]{
 .result-content>form>div{
 	margin:30px;
 	display: flex;
+	justify-content: center;
 }
+/* .result-content>form>div>button,div{
+	margin:0px 5px;
+} */
 .result-form fieldset{
     display: inline-block;
     direction: rtl;
