--- a/KccBrew/src/main/webapp/resources/css/notice/notice.css
+++ b/KccBrew/src/main/webapp/resources/css/notice/notice.css
@@ -219,7 +219,7 @@ input[type="file"] {
 	color:#a4a4a4;
 	font-size: 0.9em;
 }
-#fileUploadBtn {
+.file-label>label {
 	background-color: navy;
 	height:37px;
 	line-height:37px;
@@ -230,7 +230,7 @@ input[type="file"] {
 	align-items: center;
 	text-decoration: none;
 }
-#fileUploadBtn:hover {
+.file-label>label:hover {
 	background-color: #E6E6E6;
 	color: #111111;
 	text-decoration: none;
