--- a/KccBrew/src/main/webapp/resources/css/comm/header.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/header.css
@@ -1,10 +1,10 @@
 @charset "UTF-8";
 
-@font-face {
+/* @font-face {
 	font-family: 'Noto Sans';
 	font-style: normal;
 	src: url("../../fonts/NotoSansKR-Regular.ttf")
-}
+} */
 
 .comm-nav {
 	font-family: 'Noto Sans';
