--- a/KccBrew/src/main/webapp/resources/css/notice/notice.css
+++ b/KccBrew/src/main/webapp/resources/css/notice/notice.css
@@ -290,11 +290,15 @@ input[type="file"] {
 }
 
 #noticeImgContent {
-	border:1px solid black;
 	text-align: center;
-	height:300px;
 	line-height: 300px;
 	margin-bottom: 50px;
+}
+#notice-img{
+	height: 300px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 /******************** summernote cdn css 덮어씌우기 *********************************/
 
