feat: 수리기사 메인 공지사항

--- a/KccBrew/src/main/webapp/resources/css/comm/mainSideMenu-mecha.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/mainSideMenu-mecha.css
@@ -285,3 +285,9 @@ width: 20px;
 	margin-right: 5px;
 	color: #a2c3f5;
 }
+.notice:hover{
+	cursor: pointer;
+}
+.notice>a{
+	text-decoration: none;
+}
