feat : 휴가사용현황 검색기능 수정 / 2023-10-11 이세은

--- a/KccBrew/src/main/webapp/resources/css/schdl/myHldyList.css
+++ b/KccBrew/src/main/webapp/resources/css/schdl/myHldyList.css
@@ -11,3 +11,19 @@ input[type="date"] {
 	display: flex;
 	justify-content: space-around;
 }
+
+select[name="locationCd"] {
+	width: 300px;
+}
+
+#selectUserType {
+}
+
+#selectKeyword {
+	width: 20%;
+}
+
+#search-word {
+	max-width: none !important;
+	width: 70% !important;
+}
