feat : 캘린더조회에서 수리기사의 경우 점포명이 defined로 뜨는 문제 수정 / 2023-10-11 이세은

--- a/KccBrew/src/main/webapp/resources/css/comm/maincontents-manager.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/maincontents-manager.css
@@ -369,6 +369,10 @@ button {
 	height: 100%;
 }
 
+.fc-event-title-container {
+	text-align: center;
+}
+
 /* 캘린더 위의 해더 스타일(날짜가 있는 부분) */
 .fc-header-toolbar {
 	padding-top: 1em;
