--- a/KccBrew/src/main/webapp/resources/css/comm/maincontents-admin.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/maincontents-admin.css
@@ -369,6 +369,10 @@ border-bottom-left-radius : 10px;
 	height: 100%;
 }
 
+.fc-event-title-container {
+	text-align: center;
+}
+
 /* 캘린더 위의 해더 스타일(날짜가 있는 부분) */
 .fc-header-toolbar {
 	padding-top: 1em;
