--- a/KccBrew/src/main/webapp/resources/css/comm/maincontents-mecha.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/maincontents-mecha.css
@@ -385,6 +385,10 @@ button {
 	height: 100%;
 }
 
+.fc-event-title-container {
+	text-align: center;
+}
+
 /* 캘린더 위의 해더 스타일(날짜가 있는 부분) */
 .fc-header-toolbar {
 	padding-top: 1em;
@@ -397,6 +401,8 @@ button {
 	font-size: 20px !important;
 	font-weight: 600;
 }
+
+
 
 /************* 교육 ******************/
 #education-mark {
