design : 헤더 부분 css 변경 / 2023-10-15 이세은

--- a/KccBrew/src/main/webapp/resources/css/comm/header.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/header.css
@@ -5,7 +5,6 @@
 	font-style: normal;
 	src: url("../../fonts/NotoSansKR-Regular.ttf")
 } */
-
 .comm-nav {
 	font-family: 'Noto Sans';
 	width: 100%;
@@ -15,11 +14,12 @@
 	line-height: 100px;
 	z-index: 99999;
 	position: relative;
+	background-color: white;
 }
 
 /******** 최상단 바 ***********/
 .top-bar {
-	display: flex;
+	/* display: flex; */
 	font-family: 'Noto Sans';
 	justify-content: flex-end;
 	padding: 0;
@@ -33,8 +33,16 @@
 	align-items: center;
 }
 
+.wrap {
+	width: 1200px;
+    margin: 0 auto;
+    height: 100%;
+}
+
 .top-bar p {
 	height: 30px;
+	float: right;
+	margin-right: 5px;
 }
 
 /****** 실시간 알림 *******/
@@ -70,7 +78,10 @@
 
 /****** 알림 *******/
 #notification-link {
-	display: flex;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
 }
 
 #notification-list {
@@ -79,14 +90,19 @@
 	max-height: 700px;
 	z-index: 99;
 	overflow-y: auto;
-	right:110px;
-	top:5px;
+	right: 110px;
+	top: 5px;
 }
 
-.top-bar>div {
+#notification-image {
 	width: 20px;
-	height: 20px;
+}
+
+.header-icon-background {
+	width: 30px;
+	height: 30px;
 	margin-right: 5px;
+	float: right;
 }
 
 .top-bar>a {
@@ -96,7 +112,8 @@
 }
 
 .top-bar img {
-	width: 100% !important;
+width: 100%;
+    margin: 0 auto;
 }
 
 .list-group-item.d-flex.justify-content-between.align-items-start {
@@ -172,6 +189,7 @@
 /****** 로그아웃 버튼 *******/
 .top-bar form {
 	margin: 0px;
+	float: right;
 }
 
 .logout-btn {
@@ -183,7 +201,7 @@
 	line-height: 20px;
 	border-radius: 0;
 	margin-top: 0;
-	margin-left: 10px;
+	/* margin-left: 10px; */
 	padding: 5px 15px;
 	border: 1px solid #00006f;
 	background-color: #00006f;
@@ -203,46 +221,47 @@
 }
 /********* nav 바 *************/
 .nav-bar {
-	position: relative;
-	font-family: 'Noto Sans';
-	font-weight:500;
-	font-size: 17px;
-	/* 	padding-left: 7px;
-	padding-right: 25px; */
-	height: 70px;
-	background-color: #ffffff;
-	display: flex;
-	/* justify-content: space-around; */
-	align-items: flex-end;
+width: 1200px;
+    position: relative;
+    font-family: 'Noto Sans';
+    font-weight: 500;
+    font-size: 17px;
+    height: 70px;
+    background-color: #ffffff;
+    /* display: flex; */
+    /* justify-content: space-around; */
+    align-items: flex-end;
+        margin: 0 auto;
 }
 
 /********** 로고 *****/
 .nav-bar-brand {
-	position: relative;
-	flex: 0.15;
-	height: 60px;
-	line-height: 60px;
-	margin-left: 15px;
+    position: relative;
+    height: 100%;
+    line-height: 60px;
+    /* margin-left: 15px; */
+    width: 25%;
+    float: left;
+}
+
+.nav-bar-brand>a {
+width: 100%;
+    height: 100%;
+    display: block;
 }
 /** 로고 이미지 **/
 .nav-bar-brand img {
-	/* padding-left:25px; */
-	position: absolute;
-	top: 0;
-	left: 0;
-	/* width:200px; */
-	/* height:70px; */
-	height: 90%;
+	height: 100%;
 	cursor: pointer;
 }
 
 /** nav 메뉴 **/
 .nav-box {
-	flex: 0.85;
-	width: 100%;
-	align-items: center;
-	width: 100%;
-	background-color: #ffffff;
+    width: 100%;
+    align-items: center;
+    width: 75%;
+    background-color: #ffffff;
+    float: right;
 }
 
 .nav-list {
@@ -264,11 +283,12 @@
 	font-family: 'Noto Sans';
 	height: 70px;
 	line-height: 70px;
-	font-size: 0.9em;
+	font-size: 18px;
 	color: #111111;
 	text-decoration: none;
 	display: block;
 	text-align: center;
+	font-weight: bold;
 }
 
 /** nav 메뉴 밑줄 생성 **/
@@ -293,9 +313,9 @@
 }
 
 /** 드롭 메뉴 **/
-.nav-list:hover .comm-nav-dropdown {
+.mainmenu:hover .comm-nav-dropdown {
 	display: block;
-	position: absolute;
+	/* position: absolute; */
 	width: 100%;
 }
 
@@ -320,7 +340,7 @@
 .comm-nav-dropdown>li>a {
 	color: #5f5f5f;
 	text-decoration: none;
-	font-size: 0.7em;
+	font-size: 1em;
 }
 
 .comm-nav-dropdown>li:hover>a {
