--- a/KccBrew/src/main/webapp/resources/css/comm/header.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/header.css
@@ -288,7 +288,7 @@ width: 100%;
 	text-decoration: none;
 	display: block;
 	text-align: center;
-	font-weight: bold;
+	font-weight: 600;
 }
 
 /** nav 메뉴 밑줄 생성 **/
@@ -341,6 +341,7 @@ width: 100%;
 	color: #5f5f5f;
 	text-decoration: none;
 	font-size: 1em;
+	font-weight: 400;
 }
 
 .comm-nav-dropdown>li:hover>a {
