design : 수리기사 메인 css 수정 완료 / 2023-10-15 이세은

--- a/KccBrew/src/main/webapp/resources/css/asMng/asList.css
+++ b/KccBrew/src/main/webapp/resources/css/asMng/asList.css
@@ -11,14 +11,14 @@ p{
 
 
 .header-icon {
-	width: 100%;
+	width: 20px;
 	color: white;
 }
 
-.header-icon-background {
+/* .header-icon-background {
 	width: 20px;
 	height: 20px; 
-}
+} */
 
 /* 페이지 네비게이션 */
 .breadcrumb {
