design : 관리자 페이지 css 수정중 / 2023-10-15 이세은

--- a/KccBrew/src/main/webapp/resources/css/asMng/content-template.css
+++ b/KccBrew/src/main/webapp/resources/css/asMng/content-template.css
@@ -23155,20 +23155,10 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small, .h1 small,
 	color: #777
 }
 
-h1, .h1, h2, .h2, h3, .h3 {
-	margin-top: 20px;
-	margin-bottom: 10px
-}
-
 h1 small, .h1 small, h2 small, .h2 small, h3 small, .h3 small, h1 .small,
 	.h1 .small, h2 .small, .h2 .small, h3 .small, .h3
 .small {
 	font-size: 65%
-}
-
-h4, .h4, h5, .h5, h6, .h6 {
-	margin-top: 10px;
-	margin-bottom: 10px
 }
 
 h4 small, .h4 small, h5 small, .h5 small, h6 small, .h6 small, h4 .small,
@@ -26898,14 +26888,6 @@ label {
 	.navbar-inverse .btn-link[disabled]:focus, fieldset[disabled] .navbar-inverse .btn-link:focus
 	{
 	color: #444
-}
-
-.breadcrumb {
-	padding: 8px 15px;
-	margin-bottom: 20px;
-	list-style: none;
-	background-color: #f5f5f5;
-	border-radius: 4px
 }
 
 .breadcrumb>li {
@@ -43874,7 +43856,7 @@ figure {
 }
 
 img {
-	vertical-align: middle
+	vertical-align: sub
 }
 
 .img-responsive, .thumbnail>img, .thumbnail a>img, .carousel-inner>.item>img,
@@ -43954,11 +43936,6 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small, .h1 small,
 	color: #777
 }
 
-h1, .h1, h2, .h2, h3, .h3 {
-	margin-top: 20px;
-	margin-bottom: 10px
-}
-
 h1 small, .h1 small, h2 small, .h2 small, h3 small, .h3 small, h1 .small,
 	.h1 .small, h2 .small, .h2 .small, h3 .small, .h3
 .small {
@@ -43981,7 +43958,8 @@ h1, .h1 {
 }
 
 h2, .h2 {
-	font-size: 30px
+	font-size: 30px;
+	font-weight: 700;
 }
 
 h3, .h3 {
@@ -47632,7 +47610,6 @@ label {
 }
 
 .breadcrumb {
-	padding: 8px 15px;
 	margin-bottom: 20px;
 	list-style: none;
 	background-color: #f5f5f5;
@@ -50441,6 +50418,7 @@ a {
 
 #page-mask {
 	background-color: #eef4ff;
+	margin: 30px auto;
 }
 
 #page-container { 
@@ -50464,7 +50442,7 @@ a {
 
 .coursemos-layout-course #region-main, .coursemos-layout-course.dir-ltr.editing.used-region-side-post.used-region-side-pre #region-main,
 	#region-main {
-	padding: 32px 40px;
+	/* padding: 32px 40px; */
 	position: relative;
 	min-height: 600px
 }
@@ -50667,9 +50645,9 @@ a.logo {
 	background: #f7f9fa
 }
 
-#page.page-nosubmenu #page-content {
+/* #page.page-nosubmenu #page-content {
 	margin-left: 0px
-}
+} */
 
 #maincontent {
 	display: none
@@ -53387,19 +53365,20 @@ body.coursemos-layout-course.coursemos-layout-coursehome .course-header.course-h
 	background-color: transparent;
 	border: 0px;
 	border-radius: 0px;
-	margin: 0px 40px;
 	color: #666;
-	border-bottom: 1px solid #d9dbdb;
-	padding: 8px 0;
-	font-size: 12px
+	font-size: 12px;
+
+	position: absolute;
+    top: 0;
+    right: 0;
 }
 
 #page-content-wrap .page-content-navigation .breadcrumb
 li {
 	background: url('/theme/coursemosv2/pix/layout/breadcrumb.png')
 		no-repeat 5px center;
-	padding: 6px 3px 3px 25px;
-	line-height: 35px
+	line-height: 35px;
+	padding-left: 10px;
 }
 
 #page-content-wrap .page-content-navigation .breadcrumb li:first-child {
