--- a/KccBrew/src/main/webapp/resources/css/comm/maincontents-mecha.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/maincontents-mecha.css
@@ -157,7 +157,7 @@ button {
 }
 
 .task-list th, .task-list td {
-	padding: 10px;
+	padding: 10px 5px;
 	text-align: center;
 	font-size: 12px;
 	width: auto;
