--- a/KccBrew/src/main/webapp/resources/css/comm/myPage.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/myPage.css
@@ -30,22 +30,12 @@ button {
 }
 
 .breadcrumb {
-	height:43.67px;
 	display: flex;
-	margin: 0px;
-	background-color: transparent;
-	border: 0px;
-	border-radius: 0px;
-	margin: 0px 40px;
-	color: #666;
-	border-bottom: 1px solid #d9dbdb;
-	padding: 8px 0;
-	font-size: 12px
 }
 
-.breadcrumb-home {
-	display:inline-block;
-	width:60px;
+.header-icon {
+	    width: 20px;
+    color: white;
 }
 .right-arrow {
 	position: relative;
@@ -66,11 +56,6 @@ button {
 }
 .myInfo-wrapper {
 	height:auto;
-	padding: 32px 40px;
-}
-
-.breadcrumb-home {
-	height:44px;
 }
 
 .category{
@@ -87,7 +72,6 @@ button {
 	border-collapse: collapse;
 	border-top: 1px solid #ccc;
 	margin-top:50px;
-	margin-bottom: 10px;
 }
 
 #search-box td:first-child{
@@ -101,7 +85,6 @@ button {
 	top:30px;
 	line-height:30px;
 	border: none;
-	width: 120px; 
 	height: 150px;
 }
 
