--- a/KccBrew/src/main/webapp/resources/css/notice/notice.css
+++ b/KccBrew/src/main/webapp/resources/css/notice/notice.css
@@ -18,8 +18,8 @@ select {
 .body-wrapper {
 	width:100%;
 	height:100%;
-	background-color: #eef4ff;
-	padding:20px 20px;
+	background-color: #ffffff;
+	padding: 0 15px 50px;
 }
 .header-icon {
 	width: 100%;
@@ -93,7 +93,6 @@ h2 {
 }
 
 /****************** 공지 목록 페이지  *****************************************************/
-
 .table-wrapper {
 	background-color: #ffffff;
 	min-height:700px;
@@ -101,11 +100,14 @@ h2 {
 
 /* 검색 폼 */
 .searchBox {
-	padding: 20px 100px;
+	padding: 20px 380px;
 	background-color: #eeeeee;
 }
 .searchForm {
 	height:40px;
+}
+form {
+	margin:0;
 }
 
 #searchListForm {
@@ -157,6 +159,7 @@ h2 {
 	margin-bottom: 10px;
 }
 
+
 .notice-table tbody td:nth-child(1) {
 	width:10%;
 }
@@ -179,8 +182,10 @@ h2 {
 }
 
 .notice-table th {
+	background-color: #ffffff;
 	height:60px;
 	border-bottom:1px solid #111111;
+	border-top:2px solid #111111;
 	border-collapse: collapse;
 	text-align: center;
 	font-weight: bold;
