--- a/KccBrew/.settings/org.eclipse.wst.common.component
+++ b/KccBrew/.settings/org.eclipse.wst.common.component
@@ -29,7 +29,7 @@
         
         
         <property name="java-output-path" value="/KccBrew/target/classes"/>
-        <property name="context-root" value="kccbrew"/>
+        <property name="context-root" value="/"/>
                     
     
     </wb-module>
