--- a/KccBrew/src/main/webapp/resources/css/notice/notice.css
+++ b/KccBrew/src/main/webapp/resources/css/notice/notice.css
@@ -219,7 +219,7 @@ body {
     border: none;
     padding: 5px 10px;
     border-radius: 4px;
-    margin: auto;
+    /* margin: auto; */
     width: 80px;
 }
 
@@ -276,9 +276,13 @@ body {
 
 /************************ 공지 작성 페이지 **************************************************/
 .insert-notice-table {
-	border: none;
-	width: 1032px;
-	height: 100%;
+border: none;
+    width: 100%;
+    height: 100%;
+}
+
+.insert-notice-table > tbody {
+	border-top: 1px solid #c0c0c0;
 }
 
 .insert-notice-table tr {
@@ -293,6 +297,8 @@ body {
 .insert-notice-table th {
 	background-color: #eef4ff;
 	padding: 0 10px;
+	text-align: center;
+    font-weight: bold;
 }
 
 .insert-notice-table td {
@@ -383,9 +389,14 @@ input[type="file"] {
 }
 
 .modButtons {
-	margin-top: 50px;
-	display: block;
+	margin-top: 20px;
 	text-align: center;
+	display: flex;
+    justify-content: center;
+}
+
+.modButtons button {
+	margin: 5px;
 }
 
 /******************* 공지 상세 페이지 CSS ****************************************/
