--- a/KccBrew/src/main/webapp/resources/css/notice/notice.css
+++ b/KccBrew/src/main/webapp/resources/css/notice/notice.css
@@ -97,6 +97,12 @@ select {
 	min-height:700px;
 }
 
+/* 검색 결과 하이라이트 */
+.highlighted {
+	background-color: yellow;
+	font-weight: bold;
+}
+
 /* 검색 폼 */
 .searchBox {
 	padding: 20px 250px;
@@ -108,6 +114,7 @@ select {
 }
 .searchForm {
 	height:40px;
+	width: 800px;
 }
 form {
 	margin:0;
@@ -127,8 +134,9 @@ form {
 }
 #searchListForm .search-input .search-notice-box {
 	border: 1px solid black;
-	width: 600px;
-	height:18px;
+	width: 500px;
+	max-width:500px;
+	height: 40px;
 }
 #searchListForm .search-notice-btn button{
 	width:80px;
