--- a/KccBrew/src/main/webapp/resources/css/comm/searchUser.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/searchUser.css
@@ -1,36 +1,6 @@
-@charset "utf-8"; 
-/* CSS Document */
-.login{
-	background-color:#ebf2fc; 
-	padding:50px 0 0 0;
-}
-.wrap{
-	width:1200px; 
-	margin:0 auto ; 
-}
+/* @charset "utf-8"; 
 
-.wrap:after{
-	clear:both; 
-	display:block; 
-	content:"";
-}
-.login #footer{
-	margin-top:80px;
-}
 
-.login .loginbox{
-	margin:0 0 0 95px;
-}
-.login .loginbox .login_input{
-	width:465px; 
-	height:560px; 
-	background-color:#fff; 
-	border-bottom:3px solid #dfe6ef; 
-	margin-top:24px; 
-	padding:50px; 
-	box-sizing:border-box; 
-	float:left;
-}
 .login .loginbox .login_input h2{
 	display:flex; 
 }
@@ -177,4 +147,4 @@
 	font-weight:100; 
 	height:16px; 
 	line-height:16px; 
-}
+} */
