--- a/KccBrew/src/main/webapp/resources/css/notice/notice.css
+++ b/KccBrew/src/main/webapp/resources/css/notice/notice.css
@@ -95,7 +95,8 @@ body {
 .searchBox {
 	padding: 20px 250px;
 	background-color: #eeeeee;
-	border-bottom: 1px solid #111111;
+	border-bottom: 1px solid #c0c0c0;
+	border-top: 1px solid #c0c0c0;
 }
 .margin-for-searchbox {
 	margin-bottom: 60px;
@@ -134,6 +135,13 @@ form {
 	cursor: pointer;
 	border:none;
 	border-radius: 4px;
+}
+#resetBtn {
+	position:relative;
+	border:none;
+	background-color: transparent;
+	bottom: 30px;
+	left: 475px;
 }
 /* 리스트 출력 개수 select 박스 */
 #cntPerPage{
@@ -238,7 +246,7 @@ form {
 	text-decoration: underline;
 }
 
-.writeBtn, #insertNoticeBtn, .cancel, .toListBtn, .deleteBtn, .updateBtn, #updateNoticeBtn{
+#insertNoticeBtn, .cancel, .toListBtn, .deleteBtn, .updateBtn, #updateNoticeBtn{
 	background-color: navy;
 	color: #ffffff;
 	border: none;
@@ -248,6 +256,16 @@ form {
 	align-items: center;
 	text-decoration: none;
 	margin-right:30px;
+}
+.writeBtn {
+	background-color: navy;
+	color: #ffffff;
+	border: none;
+	padding:5px 10px;
+	border-radius: 4px;
+	display:inline-block;
+	align-items: center;
+	text-decoration: none;
 }
 
 .writeBtn:hover, #insertNoticeBtn:hover, .cancel:hover, .toListBtn:hover, .deleteBtn:hover, .updateBtn:hover, #updateNoticeBtn:hover{
