--- a/KccBrew/src/main/webapp/resources/css/notice/content-template.css
+++ b/KccBrew/src/main/webapp/resources/css/notice/content-template.css
@@ -39122,8 +39122,33 @@ textarea.form-item .form-setting select, textarea.form-item .form-setting input[
 	}
 }
 
-form select, form input[type="text"], form input[type="password"], form.atto_form input[type="url"],
+form input[type="text"], form input[type="password"], form.atto_form input[type="url"],
 	select.singleselect {
+	display: block;
+	display: inline;
+	width: 100%;
+	/* width: auto; */
+	/* max-width: 300px; */
+	height: 34px;
+	padding: 6px 12px;
+	margin: 0 0 5px 0;
+	font-size: 14px;
+	line-height: 1.42857143;
+	color: #555;
+	background-color: #fff;
+	background-image: none;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+	-webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow
+		ease-in-out .15s;
+	-o-transition: border-color ease-in-out .15s, box-shadow ease-in-out
+		.15s;
+	transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s
+}
+
+form select {
 	display: block;
 	display: inline;
 	width: 100%;
@@ -47598,7 +47623,8 @@ label {
 }
 
 .breadcrumb>li {
-	display: inline-block
+	display: inline-block;
+	padding-left: 5px;
 }
 
 /* .breadcrumb>li+li:before {
@@ -53360,6 +53386,7 @@ li {
 		no-repeat 5px center;
 	line-height: 35px;
 	padding-left: 10px;
+	color:black;
 }
 
 #page-content-wrap .page-content-navigation .breadcrumb li:first-child {
