--- a/KccBrew/src/main/webapp/resources/css/comm/myPage.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/myPage.css
@@ -123,7 +123,8 @@ label {
 	vertical-align: top;
 }
 #search-box td {
-	line-height:57px;
+	line-height:62px;
+	height:62px;
 	padding: 0 10px;
 	border: 0px;
 	border-bottom: 1px solid #ccc;
