--- a/KccBrew/src/main/webapp/resources/css/schdl/myHldyList.css
+++ b/KccBrew/src/main/webapp/resources/css/schdl/myHldyList.css
@@ -35,3 +35,77 @@ select[name="locationCd"] {
 .download-excel:hover{
 	color:black;
 }
+
+    /* 휴가취소모달창 */
+#cancelModal >  .modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0,0,0,0.7);
+    }
+    
+    #cancelModal >   .modal-content{
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: white;
+      padding: 20px;
+      border-radius: 5px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+      text-align: center;
+    }
+    
+    #cancelModal >.close-button{
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      cursor: pointer;
+    }
+    
+       /* 휴가취소확인 모달창 */
+   #resultModal > .modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0,0,0,0.7);
+    }
+ 
+ #modalMessage {
+ padding-bottom: 10px;
+ }
+    
+   #resultModal > .modal-content {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: white;
+      padding: 20px;
+      border-radius: 5px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+      text-align: center;
+    }
+    
+    #resultModal >#modal-result-confirmButton {
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      margin: 10px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    
+  #resultModal >  .close-button {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      cursor: pointer;
+    }
